fix btn contrast

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -116,7 +116,7 @@ img {
 }
 
 .btn-primary {
-    background:  var(--color-danger);
+    background:  var(--color-primary);
     color: var(--color-white);
 }
 
